# relay

./: .gitignore  AGENTS.md  AI_PROJECT.md  AI_WORKSPACE.md  Cargo.toml  Dockerfile  README.md  README.zh-CN.md  REQUIREMENTS.md  build.sh  docker-compose.yml
.agentdocs/tmp/: opencode-pwa-focus-feasibility-20260319.md
.aiws/: manifest.json
.aiws/changes/: README.md
.aiws/journal/: 2026-06-09.jsonl  2026-06-24.jsonl  2026-06-25.jsonl
.aiws/memory-bank/: README.md  implementation-plan.md  tech-stack.md
.aiws/plan/: 2026-03-14_17-36-28-golutra-analysis.md  2026-03-14_18-00-00-terminal-injection.md  2026-04-13-pwa-session-ops.md  2026-04-13_14-30-00-mobile-pwa-interaction-fix.md  20260413-pwa-playwright-intake.intake.md  hapi-actionable-cards.md
.aiws/requirements/: requirements-issues.csv
.aiws/tools/: requirements_contract.py  server_test_runner.py  ws_change_check.py  ws_resolve_sub_target.sh  ws_tasks_plan.py
.claude/: settings.json.example
.claude/commands/: aiws-change-archive.md  aiws-change-finish.md  aiws-change-list.md  aiws-change-new.md  aiws-change-next.md  aiws-change-start.md  aiws-change-status.md  aiws-change-sync.md  aiws-init.md  (+52 more)
.githooks/: commit-msg  pre-commit  pre-push  prepare-commit-msg
.opencode/: oh-my-opencode.json.example
changes/: README.md
cli/: README.md  package.json
conf/: env.example
docker/: entrypoint.sh  server.env.example
docs/: benchmarks-golutra-hapi.zh-CN.md  claude-mcp.md  codex-mcp.md  deploy.md  deploy.zh-CN.md  hostd-local-api.md  protocol.md  redaction.md  release.md
hostd/: Cargo.toml
hostd/src/: config.rs  fs_git.rs  local_api.rs  main.rs  run_manager.rs  spool.rs  tool_mode_cache.rs
hostd/src/runners/: claude.rs  codex.rs  iflow.rs  mod.rs  opencode.rs  shell.rs
issues/: problem-issues.csv
memory-bank/: architecture.md  progress.md
plan/: 2026-03-14_19-37-46-pwa-interaction-v1.md  2026-03-19_11-02-10-opencode-pwa-focus.md
protocol/: Cargo.toml
protocol/src/: lib.rs  redaction.rs
relay-cli/: Cargo.toml
relay-cli/src/: main.rs
requirements/: CHANGELOG.md  requirements-issues.csv
scripts/: dev-up.sh  docker-init.sh  e2e.sh  gen-jwt-secret.sh  install-shims.sh  linux-refresh-local.sh  mock-codex.sh  package-client.sh  package.sh  test.sh
secrets/: test-accounts.example.json
server/: Cargo.toml
server/src/: config.rs  db.rs  main.rs
tools/: iflow_watchdog.sh  install_iflow_watchdog_systemd_user.sh  requirements_contract.py  requirements_contract_sync.py  requirements_flow_gen.py  ws_change_check.py  ws_resolve_sub_target.sh  ws_tasks_plan.py
web/: index.html  package.json  playwright.config.ts  tsconfig.json  vite-plugin-e2e-mock.ts  vite.config.ts
(+357 files in other folders)
