[package]
name = "relay-hostd"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
relay-protocol = { path = "../protocol" }
axum = { version = "0.7", features = ["json"] }
portable-pty = "0.9"
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "sync", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
tokio-tungstenite = "0.26"
url = "2"
nix = { version = "0.29", default-features = false, features = ["signal"] }
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }

[dependencies.uuid]
version = "1"
features = ["v4", "serde"]
