[package]
name = "relay-protocol"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dependencies.uuid]
version = "1"
features = ["serde", "v4"]
