[package]
name = "relay-server"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = "1"
argon2 = "0.5"
axum = { version = "0.7", features = ["ws", "json"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
relay-protocol = { path = "../protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand_core = "0.6"
futures-util = "0.3"

# Storage (MVP: SQLite)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "macros"] }

[dependencies.uuid]
version = "1"
features = ["v4", "serde"]

[dependencies.sha2]
version = "0.10"

[dependencies.regex]
version = "1"
